# ScryptMineOS

./: .bazelrc  .deepsource.toml  .env.example  .pre-commit-config.yaml  .replit  ASIC_HARDWARE_EMULATION_COMPLETE.md  ASIC_VIRTUALIZATION_GUIDE.md  BAZEL_SETUP.bat  BAZEL_USAGE.md  BRANCH_PROTECTION_GUIDE.md  BUILD  BYTEROVER_MCP_HANDBOOK.md  BYTEROVER_MCP_HANDBOOK_backup_20250906.md  BYTEROVER_MCP_HANDBOOK_backup_20250906_2.md  BYTEROVER_MCP_HANDBOOK_backup_manual.md  CHECK_MINING_STATUS.bat  CONTRIBUTING.md  CREATE_PRODUCTION_PACKAGE.py  ECONOMIC_SAFETY_GUIDE.md  ENGINEERING_INTEGRATION_GUIDE.md  ENHANCED_STRATUM_README.md  ENTERPRISE_README.md  HOW_TO_RUN.md  LAUNCH_GUIDE.md  MONGODB_INTEGRATION.md  MONGODB_INTEGRATION_SUMMARY.md  OPTIMIZATION_SUCCESS.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PRODUCTION_FILE_LIST.md  PRODUCTION_MANIFEST.txt  PRODUCTION_READINESS_ANALYSIS.md  PYFIX_CHEATSHEET.md  PYFIX_UNIVERSAL.bat  README.md  README_SIMPLE.md  REPLIT_DEPLOYMENT.md  RUN_AUTO.py  RUN_NOW.bat  RUN_SIMPLE.bat  SECURITY.md  (+91 more)
.github/: CODEOWNERS
.github/workflows/: build-windows-release.yml
enterprise/security/: config_manager.py  file_access_control.py  sanitize_codebase.py
enterprise/security/private/: .env.template
kernels/: BUILD  asic_optimized_scrypt.cl.jinja  salsa20_unroll_4.cl  scrypt_core.cl.jinja  scrypt_l2_optimized.cl
params/: BUILD  scrypt_doge.toml
private/: .env.enterprise  .env.template  BYTEROVER_MCP_HANDBOOK.md  BYTEROVER_MCP_HANDBOOK_UPDATED.md  BYTEROVER_MCP_HANDBOOK_backup_20250906.md  BYTEROVER_MCP_HANDBOOK_backup_20250906_2.md
scrypt_doge_refactored/: COMPLETION_PLAN.md  DEVELOPMENT_ROADMAP.md  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  NEVER_MISS_A_SATOSHI.md  PAYOUT_ADDR_INSTRUCTIONS.md  PHASE_2_COMPLETE.md  PHASE_2_PLAN.md  PHASE_3_COMPLETE.md  PHASE_3_PLAN.md  PR_SUMMARY.md  README.md  SSL_CONFIGURATION.md  STATUS_UPDATE.md  TASKS.md  TEST_PLAN.md  TODO.md  UPDATE_SUMMARY.md  docker-compose.yml  fix_whitespace.py  install.sh  main.py  mining-os.service  requirements.txt  run_server.py  scrypt-miner.service  set-payout-addr.bat  settings.yaml  start-mining-os.ps1  task.md  test_payout_addr.py  test_phase3_features.py  test_real_mining.py  test_server.py  verify_installation.py
scrypt_doge_refactored/.github/workflows/: ci-cd.yaml
scrypt_doge_refactored/config/: __init__.py  constants.py  mining_config.yaml
scrypt_doge_refactored/core/: __init__.py  config_manager.py  database_manager.py  main_service.py  mining_service.py  models.py  profitability_calculator.py  service_container.py  stratum_integration.py
scrypt_doge_refactored/docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  SYSTEM_ARCHITECTURE.md  __init__.py  api.md  architecture.md  deployment.md  troubleshooting.md
scrypt_doge_refactored/examples/: mongodb_example.py
scrypt_doge_refactored/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scrypt_doge_refactored/frontend/src/: App.tsx
scrypt_doge_refactored/frontend/src/components/: AlertBanner.tsx  ControlPanel.tsx  (+4 more)
scrypt_doge_refactored/hardware/: __init__.py  asic_emulator.py  asic_interface.py  gpu_asic_hybrid.py
scrypt_doge_refactored/k8s/: configmap.yaml  deployment.yaml  secret.yaml
scrypt_doge_refactored/monitoring/: __init__.py  prometheus.yml  stratum_monitoring.py  system_monitor_clean.py
scrypt_doge_refactored/monitoring/grafana/: dashboard.json
scrypt_doge_refactored/network/: __init__.py  pool_manager.py  stratum_client.py  stratum_protocol.py
scrypt_doge_refactored/optimization/: __init__.py  performance_optimizer.py
scrypt_doge_refactored/scripts/: benchmark.py  deploy.bat  deploy.sh  deploy_production.py  deploy_windows.bat  start_miner.bat
scrypt_doge_refactored/scripts/config/: mining_config.yaml
scrypt_doge_refactored/security/: __init__.py  economic_guardian.py  security_manager.py  stratum_security.py
scrypt_doge_refactored/src/mining_os/: README.md  __init__.py  __main__.py  config.py  constants.py  economic_guardian.py  mining.py  requirements.txt  server.py  stratum_client.py
scrypt_doge_refactored/tests/: __init__.py  test_comprehensive.py  test_database_integration.py  test_end_to_end.py  test_integration.py  test_integration_complete.py
scrypt_doge_refactored/tests/core/: test_config_manager.py  test_mining_service.py
scrypt_doge_refactored/tests/hardware/: test_hardware_interface.py
scrypt_doge_refactored/tests/monitoring/: test_monitoring_system.py
scrypt_doge_refactored/tests/network/: test_stratum_client.py
scrypt_doge_refactored/tests/security/: test_security_manager.py
scrypt_doge_refactored/utils/: __init__.py  continuous_miner.py  logger.py
src/: BUILD  gl4_hash.c  sha256.comp
src/scryptmineos/: __init__.py  cli.py
windows/: enterprise_launcher.py  setup.py  setup_launcher.py
(+19 files in other folders)
